2005-02-11  Raja R Harinath  <rharinath@novell.com>

	* ResXResourceReader.cs (load_data): Make exception more informative.

2005-02-10  Geoff Norton  <gnorton@customerdna.com>

	* ResXResourceReader.cs: Implement the ability to convert the
	MS Base64 encoded objects.  Implement the ability to convert objects
	to their type rather than just to string.

2004-11-08 14:28  pbartok

	* ResXResourceReader.cs:
	  - BenM's Fix for bug 68260

2004-10-13 08:14  pbartok

	* ResXResourceReader.cs:
	  - Patch by joel.reed@ddiworld.com (joel) to handle CDATA sections.

2004-08-29 22:36  pbartok

	* ResXResourceReader.cs, ResXResourceWriter.cs:
	  - Transfered files from previous version of System.Windows.Forms
	  - Added full copyright header
