@@ -156,8 +156,14 @@ namespace System.Resources
 
 					Type tt = t == null ? null : Type.GetType (t);
 
-					if (t != null && tt == null)
-						throw new SystemException ("The type `" + t +"' could not be resolved");
+					if (t != null && tt == null) {
+						// We dont implement all the SWF Converters yet so lets silently reintroduce the broken behaviour for now
+						string s = get_value (reader, "value");
+						if (s != null) {
+							hasht [n] = s;
+						}
+						// throw new SystemException ("The type `" + t +"' could not be resolved");
+					} else 
 
 					if (n != null) {
 						object v = null;
@@ -166,12 +172,16 @@ namespace System.Resources
 							TypeConverter c = TypeDescriptor.GetConverter (tt);
 							v = c.ConvertFrom (Convert.FromBase64String (val));
 						} else if (tt != null) {
-							TypeConverter c = TypeDescriptor.GetConverter (tt);
-							v = c.ConvertFromString (val);
+							// Some of our converters are broken; lets hide that for now as well
+							try {
+								TypeConverter c = TypeDescriptor.GetConverter (tt);
+								v = c.ConvertFromString (val);
+						 	} catch {}
 						} else { 
 							v = val;
 						}
-						hasht [n] = v;
+						if (v != null) 
+							hasht [n] = v;
 					}
 				}
 			}
